Rotation implemented fully :)

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
           <span>♦</span>
         </div>
       </div>
+    </div>
+    <div class="tableu">
       <div class="card club">
         <div class="corner top">
           <span class="number">2</span>
@@ -67,31 +69,76 @@
           <span>♣</span>
         </div>
       </div>
+    </div>
+    <div class="tableu">
       <div class="card club ten">
+        <div class="flipper">
+          <div class="front">
+            <div class="corner top">
+              <span class="number">10</span>
+              <span>♣</span>
+            </div>
+            <span class="suit top left">♣</span>
+            <span class="suit top right">♣</span>
+            <span class="suit under-top center">♣</span>
+            <span class="suit over-middle left">♣</span>
+            <span class="suit over-middle right">♣</span>
+            <span class="suit under-middle left">♣</span>
+            <span class="suit under-middle right">♣</span>
+            <span class="suit over-bottom center">♣</span>
+            <span class="suit bottom left">♣</span>
+            <span class="suit bottom right">♣</span>
+            <div class="corner bottom">
+              <span class="number">10</span>
+              <span>♣</span>
+            </div>
+          </div>
+          <div class="back">
+            <div class="pattern"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="tableu">
+      <div class="card diamond">
         <div class="corner top">
-          <span class="number">10</span>
+          <span class="number">8</span>
+          <span>♦</span>
+        </div>
+        <span class="suit top left">♦</span>
+        <span class="suit top right">♦</span>
+        <span class="suit under-top center">♦</span>
+        <span class="suit middle left">♦</span>
+        <span class="suit middle right">♦</span>
+        <span class="suit over-bottom center">♦</span>
+        <span class="suit bottom left">♦</span>
+        <span class="suit bottom right">♦</span>
+        <div class="corner bottom">
+          <span class="number">8</span>
+          <span>♦</span>
+        </div>
+      </div>
+    </div>
+    <div class="tableu">
+      <div class="card club">
+        <div class="corner top">
+          <span class="number">8</span>
           <span>♣</span>
         </div>
         <span class="suit top left">♣</span>
         <span class="suit top right">♣</span>
         <span class="suit under-top center">♣</span>
-        <span class="suit over-middle left">♣</span>
-        <span class="suit over-middle right">♣</span>
-        <span class="suit under-middle left">♣</span>
-        <span class="suit under-middle right">♣</span>
+        <span class="suit middle left">♣</span>
+        <span class="suit middle right">♣</span>
         <span class="suit over-bottom center">♣</span>
         <span class="suit bottom left">♣</span>
         <span class="suit bottom right">♣</span>
         <div class="corner bottom">
-          <span class="number">10</span>
+          <span class="number">8</span>
           <span>♣</span>
         </div>
       </div>
     </div>
-    <div class="tableu"></div>
-    <div class="tableu"></div>
-    <div class="tableu"></div>
-    <div class="tableu"></div>
     <div class="tableu"></div>
     <div class="tableu"></div>
     <div class="tableu"></div>
