Created template for all cards. Added new background.

--- a/index.html
+++ b/index.html
@@ -25,52 +25,61 @@
 
 </head>
 <body>
-  <div class="top-row">
+  <div class="top-piles">
     <div class="stock">
-      stock
+      <div class="card diamond">
+        <div class="flipper">
+          <div class="front">
+            <div class="corner top">
+              <span class="number">8</span>
+              <span>♦</span>
+            </div>
+            <span class="suit top left">♦</span>
+            <span class="suit top right">♦</span>
+            <span class="suit under-top center">♦</span>
+            <span class="suit middle left">♦</span>
+            <span class="suit middle right">♦</span>
+            <span class="suit over-bottom center">♦</span>
+            <span class="suit bottom left">♦</span>
+            <span class="suit bottom right">♦</span>
+            <div class="corner bottom">
+              <span class="number">8</span>
+              <span>♦</span>
+            </div>
+          </div>
+          <div class="back"></div>
+        </div>
+      </div>
     </div>
 
     <div class="waste">
-      waste
+      <div class="card club ten">
+        <div class="flipper">
+          <div class="front">
+            <div class="corner top">
+              <span class="number">9</span>
+              <span>♣</span>
+            </div>
+            <span class="suit top left">♣</span>
+            <span class="suit top right">♣</span>
+            <span class="suit under-top center">♣</span>
+            <span class="suit over-middle left">♣</span>
+            <span class="suit over-middle right">♣</span>
+            <span class="suit under-middle left">♣</span>
+            <span class="suit under-middle right">♣</span>
+            <span class="suit bottom left">♣</span>
+            <span class="suit bottom right">♣</span>
+            <div class="corner bottom">
+              <span class="number">9</span>
+              <span>♣</span>
+            </div>
+          </div>
+          <div class="back"></div>
+        </div>
+      </div>
     </div>
 
     <div class="foundation">
-      <div class="pile"></div>
-      <div class="pile"></div>
-      <div class="pile"></div>
-      <div class="pile"></div>
-    </div>
-  </div>
-
-  <div class="tableux">
-    <div class="tableu">
-      <div class="card diamond">
-        <div class="corner top">
-          <span class="number">A</span>
-          <span>♦</span>
-        </div>
-        <span class="suit middle center">♦</span>
-        <div class="corner bottom">
-          <span class="number">A</span>
-          <span>♦</span>
-        </div>
-      </div>
-    </div>
-    <div class="tableu">
-      <div class="card club">
-        <div class="corner top">
-          <span class="number">2</span>
-          <span>♣</span>
-        </div>
-        <span class="suit top center">♣</span>
-        <span class="suit bottom center">♣</span>
-        <div class="corner bottom">
-          <span class="number">2</span>
-          <span>♣</span>
-        </div>
-      </div>
-    </div>
-    <div class="tableu">
       <div class="card club ten">
         <div class="flipper">
           <div class="front">
@@ -93,55 +102,214 @@
               <span>♣</span>
             </div>
           </div>
-          <div class="back">
-            <div class="pattern"></div>
-          </div>
+          <div class="back"></div>
         </div>
       </div>
     </div>
+    <div class="foundation">
+      <div class="card diamond">
+        <div class="flipper">
+          <div class="front">
+            <div class="corner top">
+              <span class="number">J</span>
+              <span>♦</span>
+            </div>
+            <span class="suit middle center">♦</span>
+            <div class="corner bottom">
+              <span class="number">J</span>
+              <span>♦</span>
+            </div>
+          </div>
+          <div class="back"></div>
+        </div>
+      </div>
+    </div>
+    <div class="foundation">
+      <div class="card diamond">
+        <div class="flipper">
+          <div class="front">
+            <div class="corner top">
+              <span class="number">Q</span>
+              <span>♦</span>
+            </div>
+            <span class="suit middle center">♦</span>
+            <div class="corner bottom">
+              <span class="number">Q</span>
+              <span>♦</span>
+            </div>
+          </div>
+          <div class="back"></div>
+        </div>
+      </div>
+    </div>
+    <div class="foundation">
+      <div class="card diamond">
+        <div class="flipper">
+          <div class="front">
+            <div class="corner top">
+              <span class="number">K</span>
+              <span>♦</span>
+            </div>
+            <span class="suit middle center">♦</span>
+            <div class="corner bottom">
+              <span class="number">K</span>
+              <span>♦</span>
+            </div>
+          </div>
+          <div class="back"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="tableux">
     <div class="tableu">
       <div class="card diamond">
-        <div class="corner top">
-          <span class="number">8</span>
-          <span>♦</span>
-        </div>
-        <span class="suit top left">♦</span>
-        <span class="suit top right">♦</span>
-        <span class="suit under-top center">♦</span>
-        <span class="suit middle left">♦</span>
-        <span class="suit middle right">♦</span>
-        <span class="suit over-bottom center">♦</span>
-        <span class="suit bottom left">♦</span>
-        <span class="suit bottom right">♦</span>
-        <div class="corner bottom">
-          <span class="number">8</span>
-          <span>♦</span>
+        <div class="flipper">
+          <div class="front">
+            <div class="corner top">
+              <span class="number">A</span>
+              <span>♦</span>
+            </div>
+            <span class="suit middle center">♦</span>
+            <div class="corner bottom">
+              <span class="number">A</span>
+              <span>♦</span>
+            </div>
+          </div>
+          <div class="back"></div>
         </div>
       </div>
     </div>
     <div class="tableu">
       <div class="card club">
-        <div class="corner top">
-          <span class="number">8</span>
-          <span>♣</span>
-        </div>
-        <span class="suit top left">♣</span>
-        <span class="suit top right">♣</span>
-        <span class="suit under-top center">♣</span>
-        <span class="suit middle left">♣</span>
-        <span class="suit middle right">♣</span>
-        <span class="suit over-bottom center">♣</span>
-        <span class="suit bottom left">♣</span>
-        <span class="suit bottom right">♣</span>
-        <div class="corner bottom">
-          <span class="number">8</span>
-          <span>♣</span>
+        <div class="flipper">
+          <div class="front">
+            <div class="corner top">
+              <span class="number">2</span>
+              <span>♣</span>
+            </div>
+            <span class="suit top center">♣</span>
+            <span class="suit bottom center">♣</span>
+            <div class="corner bottom">
+              <span class="number">2</span>
+              <span>♣</span>
+            </div>
+          </div>
+          <div class="back"></div>
         </div>
       </div>
     </div>
-    <div class="tableu"></div>
-    <div class="tableu"></div>
-    <div class="tableu"></div>
+    <div class="tableu">
+      <div class="card heart">
+        <div class="flipper">
+          <div class="front">
+            <div class="corner top">
+              <span class="number">3</span>
+              <span>♥</span>
+            </div>
+            <span class="suit top center">♥</span>
+            <span class="suit middle center">♥</span>
+            <span class="suit bottom center">♥</span>
+            <div class="corner bottom">
+              <span class="number">3</span>
+              <span>♥</span>
+            </div>
+          </div>
+          <div class="back"></div>
+        </div>
+      </div>
+    </div>
+    <div class="tableu">
+      <div class="card spade">
+        <div class="flipper">
+          <div class="front">
+            <div class="corner top">
+              <span class="number">4</span>
+              <span>♠</span>
+            </div>
+            <span class="suit top left">♠</span>
+            <span class="suit top right">♠</span>
+            <span class="suit bottom left">♠</span>
+            <span class="suit bottom right">♠</span>
+            <div class="corner bottom">
+              <span class="number">4</span>
+              <span>♠</span>
+            </div>
+          </div>
+          <div class="back"></div>
+        </div>
+      </div>
+    </div>
+    <div class="tableu">
+      <div class="card spade">
+        <div class="flipper">
+          <div class="front">
+            <div class="corner top">
+              <span class="number">5</span>
+              <span>♠</span>
+            </div>
+            <span class="suit top left">♠</span>
+            <span class="suit top right">♠</span>
+            <span class="suit middle center">♠</span>
+            <span class="suit bottom left">♠</span>
+            <span class="suit bottom right">♠</span>
+            <div class="corner bottom">
+              <span class="number">5</span>
+              <span>♠</span>
+            </div>
+          </div>
+          <div class="back"></div>
+        </div>
+      </div>
+    </div>
+    <div class="tableu">
+      <div class="card spade">
+        <div class="flipper">
+          <div class="front">
+            <div class="corner top">
+              <span class="number">6</span>
+              <span>♠</span>
+            </div>
+            <span class="suit top left">♠</span>
+            <span class="suit top right">♠</span>
+            <span class="suit middle left">♠</span>
+            <span class="suit middle right">♠</span>
+            <span class="suit bottom left">♠</span>
+            <span class="suit bottom right">♠</span>
+            <div class="corner bottom">
+              <span class="number">6</span>
+              <span>♠</span>
+            </div>
+          </div>
+          <div class="back"></div>
+        </div>
+      </div>
+    </div>
+    <div class="tableu">
+      <div class="card spade">
+        <div class="flipper">
+          <div class="front">
+            <div class="corner top">
+              <span class="number">7</span>
+              <span>♠</span>
+            </div>
+            <span class="suit top left">♠</span>
+            <span class="suit top right">♠</span>
+            <span class="suit under-top center">♠</span>
+            <span class="suit middle left">♠</span>
+            <span class="suit middle right">♠</span>
+            <span class="suit bottom left">♠</span>
+            <span class="suit bottom right">♠</span>
+            <div class="corner bottom">
+              <span class="number">7</span>
+              <span>♠</span>
+            </div>
+          </div>
+          <div class="back"></div>
+        </div>
+      </div>
+    </div>
   </div>
 
 </body>
