--- a/cards.html
+++ b/cards.html
@@ -1,40 +1,3 @@
-<!DOCTYPE html>
-
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-
-  <!-- Set the viewport width to device width for mobile -->
-  <meta name="viewport" content="width=device-width" />
-
-  <title>Solitario</title>
-
-  <!-- Included CSS Files -->
-  <link rel="stylesheet" href="stylesheets/app.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-  <script>
-  $(document).ready(function() {
-    $(".card").draggable();
-  });
-  </script>
-</head>
-<body>
-  <div class="pile" id="stock"></div>
-  <div class="pile" id="waste"></div>
-
-  <div class="pile foundation" id="foundation-1"></div>
-  <div class="pile foundation" id="foundation-2"></div>
-  <div class="pile foundation" id="foundation-3"></div>
-  <div class="pile foundation" id="foundation-4"></div>
-
-  <div class="pile tableu" id="tableu-1"></div>
-  <div class="pile tableu" id="tableu-2"></div>
-  <div class="pile tableu" id="tableu-3"></div>
-  <div class="pile tableu" id="tableu-4"></div>
-  <div class="pile tableu" id="tableu-5"></div>
-  <div class="pile tableu" id="tableu-6"></div>
-  <div class="pile tableu" id="tableu-7"></div>
 
   <div class="card club" id="ca">
     <div class="flipper">
@@ -1083,7 +1046,7 @@
     </div>
   </div>
 
-  <div class="card spade revealed" id="sk">
+  <div class="card spade" id="sk">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -1099,6 +1062,3 @@
       <div class="back"></div>
     </div>
   </div>
-
-</body>
-</html>
