Added function to resize board.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   <!-- Included CSS Files -->
   <link rel="stylesheet" href="css/app.css">
-  <!-- <script src="js/goog/base.js"></script>
-  <script src="js/solitario/init.js"></script> -->
-  <script src="js/app.js"></script>
+  <script src="js/goog/base.js"></script>
+  <script src="js/solitario/init.js"></script>
+  <!-- <script src="js/app.js"></script> -->
 </head>
 <body>
   <div class="pile" id="stock"></div>
