--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <!-- Included CSS Files -->
   <link rel="stylesheet" href="css/app.css">
   <script src="js/goog/base.js"></script>
-  <script src="js/solitario/init.js"></script>
-  <!-- <script src="js/app.js"></script> -->
+  <script src="js/solitario/deps.js"></script>
+  <script src="js/solitario/app.js"></script>
+  <!-- <script src="js/app.compiled.js"></script> -->
 </head>
 <body>
   <div class="pile" id="stock"></div>
@@ -32,7 +33,8 @@
   <div class="pile tableu" id="tableu-6"></div>
   <div class="pile tableu" id="tableu-7"></div>
 
-  <div class="card club" id="ca">
+
+  <div class="card club" id="ca" data-suit="club" data-number="A">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -49,7 +51,7 @@
     </div>
   </div>
 
-  <div class="card club" id="c2">
+  <div class="card club" id="c2" data-suit="club" data-number="2">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -67,7 +69,7 @@
     </div>
   </div>
 
-  <div class="card club" id="c3">
+  <div class="card club" id="c3" data-suit="club" data-number="3">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -86,7 +88,7 @@
     </div>
   </div>
 
-  <div class="card club" id="c4">
+  <div class="card club" id="c4" data-suit="club" data-number="4">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -106,7 +108,7 @@
     </div>
   </div>
 
-  <div class="card club" id="c5">
+  <div class="card club" id="c5" data-suit="club" data-number="5">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -127,7 +129,7 @@
     </div>
   </div>
 
-  <div class="card club" id="c6">
+  <div class="card club" id="c6" data-suit="club" data-number="6">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -149,7 +151,7 @@
     </div>
   </div>
 
-  <div class="card club" id="c7">
+  <div class="card club" id="c7" data-suit="club" data-number="7">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -172,7 +174,7 @@
     </div>
   </div>
 
-  <div class="card club" id="c8">
+  <div class="card club" id="c8" data-suit="club" data-number="8">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -196,7 +198,7 @@
     </div>
   </div>
 
-  <div class="card club" id="c9">
+  <div class="card club" id="c9" data-suit="club" data-number="9">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -221,7 +223,7 @@
     </div>
   </div>
 
-  <div class="card club" id="c10">
+  <div class="card club" id="c10" data-suit="club" data-number="10">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -247,7 +249,7 @@
     </div>
   </div>
 
-  <div class="card club" id="cj">
+  <div class="card club" id="cj" data-suit="club" data-number="J">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -264,7 +266,7 @@
     </div>
   </div>
 
-  <div class="card club" id="cq">
+  <div class="card club" id="cq" data-suit="club" data-number="Q">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -281,7 +283,7 @@
     </div>
   </div>
 
-  <div class="card club" id="ck">
+  <div class="card club" id="ck" data-suit="club" data-number="K">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -298,7 +300,7 @@
     </div>
   </div>
 
-  <div class="card diamond" id="da">
+  <div class="card diamond" id="da" data-suit="diamond" data-number="A">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -315,7 +317,7 @@
     </div>
   </div>
 
-  <div class="card diamond" id="d2">
+  <div class="card diamond" id="d2" data-suit="diamond" data-number="2">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -333,7 +335,7 @@
     </div>
   </div>
 
-  <div class="card diamond" id="d3">
+  <div class="card diamond" id="d3" data-suit="diamond" data-number="3">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -352,7 +354,7 @@
     </div>
   </div>
 
-  <div class="card diamond" id="d4">
+  <div class="card diamond" id="d4" data-suit="diamond" data-number="4">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -372,7 +374,7 @@
     </div>
   </div>
 
-  <div class="card diamond" id="d5">
+  <div class="card diamond" id="d5" data-suit="diamond" data-number="5">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -393,7 +395,7 @@
     </div>
   </div>
 
-  <div class="card diamond" id="d6">
+  <div class="card diamond" id="d6" data-suit="diamond" data-number="6">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -415,7 +417,7 @@
     </div>
   </div>
 
-  <div class="card diamond" id="d7">
+  <div class="card diamond" id="d7" data-suit="diamond" data-number="7">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -438,7 +440,7 @@
     </div>
   </div>
 
-  <div class="card diamond" id="d8">
+  <div class="card diamond" id="d8" data-suit="diamond" data-number="8">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -462,7 +464,7 @@
     </div>
   </div>
 
-  <div class="card diamond" id="d9">
+  <div class="card diamond" id="d9" data-suit="diamond" data-number="9">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -487,7 +489,7 @@
     </div>
   </div>
 
-  <div class="card diamond" id="d10">
+  <div class="card diamond" id="d10" data-suit="diamond" data-number="10">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -513,7 +515,7 @@
     </div>
   </div>
 
-  <div class="card diamond" id="dj">
+  <div class="card diamond" id="dj" data-suit="diamond" data-number="J">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -530,7 +532,7 @@
     </div>
   </div>
 
-  <div class="card diamond" id="dq">
+  <div class="card diamond" id="dq" data-suit="diamond" data-number="Q">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -547,7 +549,7 @@
     </div>
   </div>
 
-  <div class="card diamond" id="dk">
+  <div class="card diamond" id="dk" data-suit="diamond" data-number="K">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -564,7 +566,7 @@
     </div>
   </div>
 
-  <div class="card heart" id="ha">
+  <div class="card heart" id="ha" data-suit="heart" data-number="A">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -581,7 +583,7 @@
     </div>
   </div>
 
-  <div class="card heart" id="h2">
+  <div class="card heart" id="h2" data-suit="heart" data-number="2">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -599,7 +601,7 @@
     </div>
   </div>
 
-  <div class="card heart" id="h3">
+  <div class="card heart" id="h3" data-suit="heart" data-number="3">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -618,7 +620,7 @@
     </div>
   </div>
 
-  <div class="card heart" id="h4">
+  <div class="card heart" id="h4" data-suit="heart" data-number="4">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -638,7 +640,7 @@
     </div>
   </div>
 
-  <div class="card heart" id="h5">
+  <div class="card heart" id="h5" data-suit="heart" data-number="5">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -659,7 +661,7 @@
     </div>
   </div>
 
-  <div class="card heart" id="h6">
+  <div class="card heart" id="h6" data-suit="heart" data-number="6">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -681,7 +683,7 @@
     </div>
   </div>
 
-  <div class="card heart" id="h7">
+  <div class="card heart" id="h7" data-suit="heart" data-number="7">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -704,7 +706,7 @@
     </div>
   </div>
 
-  <div class="card heart" id="h8">
+  <div class="card heart" id="h8" data-suit="heart" data-number="8">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -728,7 +730,7 @@
     </div>
   </div>
 
-  <div class="card heart" id="h9">
+  <div class="card heart" id="h9" data-suit="heart" data-number="9">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -753,7 +755,7 @@
     </div>
   </div>
 
-  <div class="card heart" id="h10">
+  <div class="card heart" id="h10" data-suit="heart" data-number="10">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -779,7 +781,7 @@
     </div>
   </div>
 
-  <div class="card heart" id="hj">
+  <div class="card heart" id="hj" data-suit="heart" data-number="J">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -796,7 +798,7 @@
     </div>
   </div>
 
-  <div class="card heart" id="hq">
+  <div class="card heart" id="hq" data-suit="heart" data-number="Q">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -813,7 +815,7 @@
     </div>
   </div>
 
-  <div class="card heart" id="hk">
+  <div class="card heart" id="hk" data-suit="heart" data-number="K">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -830,7 +832,7 @@
     </div>
   </div>
 
-  <div class="card spade" id="sa">
+  <div class="card spade" id="sa" data-suit="spade" data-number="A">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -847,7 +849,7 @@
     </div>
   </div>
 
-  <div class="card spade" id="s2">
+  <div class="card spade" id="s2" data-suit="spade" data-number="2">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -865,7 +867,7 @@
     </div>
   </div>
 
-  <div class="card spade" id="s3">
+  <div class="card spade" id="s3" data-suit="spade" data-number="3">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -884,7 +886,7 @@
     </div>
   </div>
 
-  <div class="card spade" id="s4">
+  <div class="card spade" id="s4" data-suit="spade" data-number="4">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -904,7 +906,7 @@
     </div>
   </div>
 
-  <div class="card spade" id="s5">
+  <div class="card spade" id="s5" data-suit="spade" data-number="5">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -925,7 +927,7 @@
     </div>
   </div>
 
-  <div class="card spade" id="s6">
+  <div class="card spade" id="s6" data-suit="spade" data-number="6">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -947,7 +949,7 @@
     </div>
   </div>
 
-  <div class="card spade" id="s7">
+  <div class="card spade" id="s7" data-suit="spade" data-number="7">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -970,7 +972,7 @@
     </div>
   </div>
 
-  <div class="card spade" id="s8">
+  <div class="card spade" id="s8" data-suit="spade" data-number="8">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -994,7 +996,7 @@
     </div>
   </div>
 
-  <div class="card spade" id="s9">
+  <div class="card spade" id="s9" data-suit="spade" data-number="9">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -1019,7 +1021,7 @@
     </div>
   </div>
 
-  <div class="card spade" id="s10">
+  <div class="card spade" id="s10" data-suit="spade" data-number="10">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -1045,7 +1047,7 @@
     </div>
   </div>
 
-  <div class="card spade" id="sj">
+  <div class="card spade" id="sj" data-suit="spade" data-number="J">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -1062,7 +1064,7 @@
     </div>
   </div>
 
-  <div class="card spade" id="sq">
+  <div class="card spade" id="sq" data-suit="spade" data-number="Q">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
@@ -1079,7 +1081,7 @@
     </div>
   </div>
 
-  <div class="card spade revealed" id="sk">
+  <div class="card spade" id="sk" data-suit="spade" data-number="K">
     <div class="flipper">
       <div class="front">
         <div class="corner top">
