Adds classes for different elements of the game.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <div class="pile" id="stock"></div>
   <div class="pile" id="waste"></div>
 
-  <div class="pile foundation" id="foundation-1"></div>
-  <div class="pile foundation" id="foundation-2"></div>
-  <div class="pile foundation" id="foundation-3"></div>
-  <div class="pile foundation" id="foundation-4"></div>
+  <div class="pile foundation" id="foundation-1" data-suit="heart"></div>
+  <div class="pile foundation" id="foundation-2" data-suit="spade"></div>
+  <div class="pile foundation" id="foundation-3" data-suit="diamond"></div>
+  <div class="pile foundation" id="foundation-4" data-suit="club"></div>
 
   <div class="pile tableu" id="tableu-1"></div>
   <div class="pile tableu" id="tableu-2"></div>
