--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <meta charset="utf-8" />
 
   <!-- Set the viewport width to device width for mobile -->
-  <meta name="viewport" content="width=device-width" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,
+    maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
 
   <title>Solitario</title>
 
   <!-- Included CSS Files -->
   <link rel="stylesheet" href="css/app.css">
-  <script src="js/goog/base.js"></script>
-  <script src="js/solitario/deps.js"></script>
-  <script src="js/solitario/app.js"></script>
+  <script src="src/goog/base.js"></script>
+  <script src="src/solitario/deps.js"></script>
+  <script src="src/solitario/app.js"></script>
   <!-- <script src="js/app.compiled.js"></script> -->
 </head>
 <body>
