Fixes Rakefile paths and creates target for development.

--- a/static/index.html
+++ b/static/index.html
@@ -11,15 +11,14 @@
   <title>Solitario</title>
 
   <link rel="stylesheet" href="css/app.css">
-  <script src="src/goog/base.js"></script>
-  <script src="src/solitario/deps.js"></script>
-  <script src="src/solitario/app.js"></script>
+  <script src="js/goog/base.js"></script>
+  <script src="js/solitario/deps.js"></script>
+  <script src="js/solitario/app.js"></script>
   <!-- <script src="js/app.compiled.js"></script> -->
 </head>
 <body>
   <div id="controlbar">
     <h1>Solitario</h1>
-    <a class="radius small button" href="#">New game</a>
   </div>
 
   <div id="board">
