--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,9 @@
   </div>
 
   <div id="board">
-    <div class="pile" id="stock"></div>
+    <div class="pile" id="stock">
+      <span class="restock">↺</span>
+    </div>
     <div class="pile" id="waste"></div>
 
     <div class="pile foundation" id="foundation-1"></div>
