Adds icon font for icons used in the game.

--- a/static/index.html
+++ b/static/index.html
@@ -23,7 +23,7 @@
 
   <div id="board">
     <div class="pile" id="stock">
-      <span class="restock">↺</span>
+      <span aria-hidden="true" class="icon-reload restock"></span>
     </div>
     <div class="pile" id="waste"></div>
 
