Adds score indicator and updates it as the score changes.

--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,9 @@
 <body>
   <div id="controlbar">
     <h1>Solitario</h1>
+    <div class="score">
+      <span id="score-value">0</span> points
+    </div>
   </div>
 
   <div id="board">
