Cleaned up top bar css and added section for game controls.

--- a/static/index.html
+++ b/static/index.html
@@ -17,8 +17,11 @@
   <!-- <script src="js/app.compiled.js"></script> -->
 </head>
 <body>
-  <div id="controlbar">
+  <div class="topbar">
     <h1>Solitario</h1>
+    <div class="controls">
+      <button type="button" class="button">New game</button>
+    </div>
     <div class="score">
       <span id="score-value">0</span> points
     </div>
