--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
   <div class="topbar">
     <h1>Solitario</h1>
     <div class="controls">
-      <button type="button" class="button">New game</button>
+      <button type="button" class="button" id="new-game-btn">New game</button>
     </div>
     <div class="score">
       <span id="score-value">0</span> points
